test/trivial/deitz/test_illegal_cast.good
test_illegal_cast.chpl:7: error: illegal cast from C to int(64)
