test/trivial/deitz/test_illegal_cast.chpl
class C {
  var x: int;
}

var c = C(2);

writeln(c:int);
